2013-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- OmniDashインターセプトを実装．未テスト
	- ソート後に重複した候補を削除する処理を追加

2013-05-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/self_intercept_simulator.h:
	* rcsc/player/Makefile.am:
	- SelfInterceptSimulatorクラス追加．実装途中

	* rcsc/player/self_intercept_v13.cpp:
	- 1ステップダッシュのダッシュ効率計算で，ダッシュ方向ではなく自分
	の体の向きを使用していたバグを修正

	* rcsc/player/self_intercept_v13.cpp:
	- 不要な関数呼び出し削除，デバッグメッセージ修正

2013-05-20  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_smart_kick.cpp:
	- デバッグメッセージ修正

	* rcsc/action/kick_table.cpp:
	- デバッグメッセージ修正

2013-05-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/kick_table.cpp:
	- risky modeに入る条件を誤っていたバグを修正

	* rcsc/common/logger.cpp:
	* rcsc/common/logger.h:
	- Logger::PLANを末尾へ移動

2013-05-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/geom/voronoi_diagram.h:
	- 内部の三角形分割を参照するメソッドを追加

	* rcsc/action/kick_table.cpp:
	- ボールをこぼすかもしれないノードはリスキーノードとして扱わないよ
	うに変更
	- 目標スピードを達成できていない場合はリスキーノードを使用した計算
	を実行するように条件を変更

	* rcsc/action/kick_table.cpp:
	* rcsc/action/kick_table.h:
	- キック列探索アルゴリズムを改善．リスキーなノードを省いた探索とリ
	スキーなノードのみの探索に分けて実行し，安全なキック列が生成されやすくした

2013-05-13  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/coach/coach_agent.cpp:
	* rcsc/coach/coach_config.cpp:
	* rcsc/coach/coach_config.h:
	* rcsc/player/player_agent.cpp:
	* rcsc/player/player_config.cpp:
	* rcsc/player/player_config.h:
	* rcsc/trainer/trainer_agent.cpp:
	* rcsc/trainer/trainer_config.cpp:
	* rcsc/trainer/trainer_config.h:
	- 各Configクラスに値をセットする方法を変更．parse()の引数として
	ParamParserを与えるようになった

	* rcsc/player/ball_object.cpp:
	* rcsc/player/ball_object.h:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/world_model.cpp:
	- 使用していなかった引数を削除
	- BallObjectとPlayerObjectに位置の履歴を保持する変数を追加

	* rcsc/player/Makefile.am:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h: